compiler/weave_syntax/tests/data/syntax/Function.error
error: unexpected token '[token:identifier]', expected ':'
        --> <source>:10:27
         |
      10 |     return a ? b + c * d  d + e / c;
         |                           ^
error: invalid expression term '='
        --> <source>:26:24
         |
      26 |     if /*let Some(y)*/ = y {
         |                        ^
error: invalid expression term '='
        --> <source>:63:39
         |
      63 | function EndOfFileDuringStatement() { =42: a=5;}
         |                                       ^
error: unexpected token ':', expected ';'
        --> <source>:63:42
         |
      63 | function EndOfFileDuringStatement() { =42: a=5;}
         |                                          ^
